--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
+<head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tyler Woody | Software Developer</title>
-  </head>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
+</head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
